--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Personal Info"
-    url: https://jiin04018.github.io/Curriculum-Vitae/Curriculum_Vitae.html
+    url: https://jiin04018.github.io/Curriculum-Vitae/Curriculum_Vit.pdf
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
